// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sign up form snapshots SignUpForm 1`] = `
<form
  className="SignUp"
  onSubmit={[Function]}
>
  <fieldset>
    <legend>
      Organization Info
    </legend>
    <label>
      Username:
      <input
        name="username"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Organization Name:
      <input
        name="name"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Email:
      <input
        name="email"
        onChange={[MockFunction]}
        required={true}
        type="email"
      />
    </label>
    <label>
      Phone:
      <input
        name="phone"
        onChange={[MockFunction]}
        required={true}
        type="tel"
      />
    </label>
    <label>
      Address:
      <label>
        Street:
        <input
          name="street"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="city"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="zipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          required={true}
          type="text"
        />
      </label>
    </label>
    <label>
      Organization Bio:
      <textarea
        name="bio"
        onChange={[MockFunction]}
      />
    </label>
    <label>
      Password:
      <input
        name="password"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
    <label>
      Confirm Password:
      <input
        name="confirmPassword"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
  </fieldset>
  <fieldset>
    <legend>
      Payment Info
    </legend>
    <label>
      Card Number
      <input
        maxLength="19"
        name="cardNumber"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="Card Number"
        required={true}
        type="text"
      />
    </label>
    <label>
      Security Code
      <input
        maxLength="3"
        name="securityCode"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Name
      <input
        name="cardName"
        onChange={[MockFunction]}
        placeholder="Card Name"
        required={true}
        type="text"
      />
    </label>
    <label>
      Expiration Date
      <input
        maxLength="2"
        name="expMonth"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="mm"
        required={true}
        type="text"
      />
      <input
        maxLength="4"
        minLength="4"
        name="expYear"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="yyyy"
        required={true}
        type="text"
      />
    </label>
    <label>
      Method
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="visa"
      />
      Visa
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="master"
      />
      Master
    </label>
    <label>
      Billing Address (if different from business address)
      <label>
        Street:
        <input
          name="billStreet"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="billCity"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="billZipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          type="text"
        />
      </label>
    </label>
  </fieldset>
  <h2>
    Total: $
  </h2>
  <button
    type="submit"
  >
    Sign Up
  </button>
</form>
`;

exports[`Sign up form snapshots form with error 1`] = `
<form
  className="SignUp"
  onSubmit={[Function]}
>
  <p
    className="error"
  >
    User already exists
  </p>
  <fieldset>
    <legend>
      Organization Info
    </legend>
    <label>
      Username:
      <input
        name="username"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Organization Name:
      <input
        name="name"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Email:
      <input
        name="email"
        onChange={[MockFunction]}
        required={true}
        type="email"
      />
    </label>
    <label>
      Phone:
      <input
        name="phone"
        onChange={[MockFunction]}
        required={true}
        type="tel"
      />
    </label>
    <label>
      Address:
      <label>
        Street:
        <input
          name="street"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="city"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="zipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          required={true}
          type="text"
        />
      </label>
    </label>
    <label>
      Organization Bio:
      <textarea
        name="bio"
        onChange={[MockFunction]}
      />
    </label>
    <label>
      Password:
      <input
        name="password"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
    <label>
      Confirm Password:
      <input
        name="confirmPassword"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
  </fieldset>
  <fieldset>
    <legend>
      Payment Info
    </legend>
    <label>
      Card Number
      <input
        maxLength="19"
        name="cardNumber"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="Card Number"
        required={true}
        type="text"
      />
    </label>
    <label>
      Security Code
      <input
        maxLength="3"
        name="securityCode"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Name
      <input
        name="cardName"
        onChange={[MockFunction]}
        placeholder="Card Name"
        required={true}
        type="text"
      />
    </label>
    <label>
      Expiration Date
      <input
        maxLength="2"
        name="expMonth"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="mm"
        required={true}
        type="text"
      />
      <input
        maxLength="4"
        minLength="4"
        name="expYear"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="yyyy"
        required={true}
        type="text"
      />
    </label>
    <label>
      Method
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="visa"
      />
      Visa
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="master"
      />
      Master
    </label>
    <label>
      Billing Address (if different from business address)
      <label>
        Street:
        <input
          name="billStreet"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="billCity"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="billZipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          type="text"
        />
      </label>
    </label>
  </fieldset>
  <h2>
    Total: $
  </h2>
  <button
    type="submit"
  >
    Sign Up
  </button>
</form>
`;
